# betamark

./: README.md  pyproject.toml  requirements.txt
betamark/: betamark.py  bicycle.py  bike.py  ocr.py  tiny_mmlu.py
scripts/: evaluate_llama_on_tiny_mmlu.py  parse_coco_annotations.py
tests/: test_bicycle.py  test_ocr.py  test_tiny_mmlu.py
